Modernize to Java 17 and GitHub Actions CI/CD
- Update Java version from 1.5 to 17
- Bump project version to 2.0-SNAPSHOT
- Replace Travis CI with GitHub Actions (CI, nightly, release workflows)
- Replace Cobertura/Coveralls with JaCoCo/Codecov
- Migrate from oss.sonatype.org to central.sonatype.com (Central Portal)
- Update all Maven plugin versions to latest
- Update JUnit from 4.4 to 4.13.2
- Fix deprecated wrapper constructors (new Boolean/Integer/Double)
- Reformat minified source files for readability
- Add AGENTS.md with build instructions and code style guidelines